--- a/index.html
+++ b/index.html
@@ -36,24 +36,6 @@
 	<!-- Current trains -->
 	<div class="container">
 		<div class="row">
-			<div class="col-md-9">
-				<div class="panel panel-primary">
-					<div class="panel-heading">
-						<h3 class="panel-title">Current Train Schedule</h3>
-					</div>
-					<div class="panel-body">
-						<table id="table" class="table table-hover">
-						  <tr>
-						    <th>Train Name</th>
-						    <th>Destination</th> 
-						    <th>Frecuency (min)</th>
-						    <th>Next Arrival</th>
-						    <th>Minutes Away</th>
-						  </tr>
-					  </table>
-					</div>
-				</div>
-			</div>
 			<div class="col-md-3">
 				<div class="panel panel-primary">
 					<div class="panel-heading">
@@ -72,7 +54,7 @@
 						    <input type="text" class="form-control" id="destination">
 						  </div>
 						  <div class="form-group">
-						    <label>First Train Time (HH:mm - military time)</label>
+						    <label>First Train Time (HH:mm)</label>
 						    <input type="text" class="form-control" id="time">
 						  </div>
 						  <div class="form-group" >
@@ -84,6 +66,25 @@
 					</div>
 				</div>
 			</div>
+			<div class="col-md-9">
+				<div class="panel panel-primary">
+					<div class="panel-heading">
+						<h3 class="panel-title">Current Train Schedule</h3>
+					</div>
+					<div class="panel-body">
+						<table id="table" class="table table-hover">
+						  <tr>
+						    <th>Train Name</th>
+						    <th>Destination</th> 
+						    <th>Frecuency (min)</th>
+						    <th>Next Arrival</th>
+						    <th>Minutes Away</th>
+						  </tr>
+					  </table>
+					</div>
+				</div>
+			</div>
+			
 		</div>  
 	</div> <!-- end table contaniner -->
 	<!-- javascript -->
